--- a/views/teacher/home.ejs
+++ b/views/teacher/home.ejs
@@ -31,10 +31,9 @@
               <a class="nav-link disabled" href="#">My Courses</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">My Cart</a>
+                <a class="nav-link disabled" href="#">Statistics</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Wish List</a>
             </li>
           </ul>
           <form class="form-inline ">
