--- a/views/teacher/xtreme-html/ltr/index.ejs
+++ b/views/teacher/xtreme-html/ltr/index.ejs
@@ -320,7 +320,7 @@
                                 <table class="table v-middle">
                                     <thead>
                                         <tr class="bg-light">
-                                            <th class="border-top-0">Courses</th>
+                                            <th class="border-top-0"><%- teacher.email %></th>
                                             <th class="border-top-0">Description</th>
                                             <th class="border-top-0">Category</th>
                                             <th class="border-top-0">Cost</th>
