--- a/views/teacher/xtreme-html/ltr/index.ejs
+++ b/views/teacher/xtreme-html/ltr/index.ejs
@@ -137,6 +137,7 @@
                     <ul id="sidebarnav">
                         <!-- User Profile-->
                         <li>
+                            <%= console.log('meow') %>
                             <!-- User Profile-->
                             <div class="user-profile d-flex no-block dropdown m-t-20">
                                 <div class="user-pic"><img src="/assets/images/users/1.jpg" alt="users"
@@ -144,9 +145,9 @@
                                 <div class="user-content hide-menu m-l-10">
                                     <a href="#" class="" id="Userdd" role="button"
                                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <h5 class="m-b-0 user-name font-medium">Steave Jobs <i
+                                        <h5 class="m-b-0 user-name font-medium"> <%= teacher.first_name %> <%= teacher.last_name %> <i
                                                 class="fa fa-angle-down"></i></h5>
-                                        <span class="op-5 user-email">varun@gmail.com</span>
+                                        <span class="op-5 user-email"><%= teacher.email%></span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="Userdd">
                                         <a class="dropdown-item" href="javascript:void(0)"><i
@@ -166,10 +167,10 @@
                             </div>
                             <!-- End User Profile-->
                         </li>
-                        <li class="p-15 m-t-10"><a href="javascript:void(0)"
+                        <!-- <li class="p-15 m-t-10"><a href="javascript:void(0)"
                                 class="btn d-block w-100 create-btn text-white no-block d-flex align-items-center"><i
                                     class="fa fa-plus-square"></i> <span class="hide-menu m-l-5">Create New</span> </a>
-                        </li>
+                        </li> -->
                         <!-- User Profile-->
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                 href="index.html" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span
@@ -179,7 +180,7 @@
                                     class="mdi mdi-account-network"></i><span class="hide-menu">Profile</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                 href="table-basic.html" aria-expanded="false"><i class="mdi mdi-border-all"></i><span
-                                    class="hide-menu">Table</span></a></li>
+                                    class="hide-menu">Courses</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                 href="icon-material.html" aria-expanded="false"><i class="mdi mdi-face"></i><span
                                     class="hide-menu">Icon</span></a></li>
@@ -320,7 +321,7 @@
                                 <table class="table v-middle">
                                     <thead>
                                         <tr class="bg-light">
-                                            <th class="border-top-0"><%- teacher.email %></th>
+                                            <th class="border-top-0">Course Title</th>
                                             <th class="border-top-0">Description</th>
                                             <th class="border-top-0">Category</th>
                                             <th class="border-top-0">Cost</th>
@@ -337,7 +338,9 @@
                                                     <div class="d-flex align-items-center">
                                                         
                                                         <div class="">
+                                                            <a href="/courses/<%= course._id %>">
                                                             <h4 class="m-b-0 font-16"><%- course.title %></h4>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </td>
@@ -350,19 +353,19 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <label class="label label-danger"><%- course.category.name %></label>
+                                                    <label class="label label-danger"><%- course.category.name%></label>
                                                 </td>
                                                 <td><%- course.price %></td>
                                                 <td><%- course.studentsEnrolled.length %></td>
                                                 <td>
                                                     <h5 class="m-b-0"><%- course.price*course.studentsEnrolled.length %></h5>  
                                                 </td>
-                                                <td>some date</td>
+                                                <td><%= course.createdAtFormatted %></td>
 
                                             </tr>
                                         <% }) %>
                                         <tr id="formTr" style="display: none;">
-                                            <form method="post" action="/teacher/create-course/">
+                                            <form method="post" action="/courses/">
                                             <td>
                                                 <div class="d-flex align-items-center">
                                                     
