--- a/views/teacher/xtreme-html/ltr/create-vid.ejs
+++ b/views/teacher/xtreme-html/ltr/create-vid.ejs
@@ -26,8 +26,7 @@
 </head>
 
 <body>
-
-
+   
 
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
@@ -104,7 +103,8 @@
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text alt="user" class="rounded-circle" width="31">
+                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="<%- teacher.profilePic %>" alt="user" class="rounded-circle" width="31">
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end user-dd animated" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i>
@@ -138,14 +138,14 @@
                         <li>
                             <!-- User Profile-->
                             <div class="user-profile d-flex no-block dropdown m-t-20">
-                                <div class="user-pic"><img src="" alt="users"
+                                <div class="user-pic"><img src="<%- teacher.profilePic %>" alt="users"
                                         class="rounded-circle" width="40" /></div>
                                 <div class="user-content hide-menu m-l-10">
                                     <a href="#" class="" id="Userdd" role="button"
                                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <h5 class="m-b-0 user-name font-medium"> <i
+                                        <h5 class="m-b-0 user-name font-medium"><%- teacher.first_name %> <%- teacher.last_name %> <i
                                                 class="fa fa-angle-down"></i></h5>
-                                        <span class="op-5 user-email"></span>
+                                        <span class="op-5 user-email"><%- teacher.email %></span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="Userdd">
                                         <a class="dropdown-item" href="javascript:void(0)"><i
@@ -239,97 +239,41 @@
                 <!-- Row -->
                 <div class="row">
                     <!-- Column -->
-                    <div class="col-lg-4 col-xlg-3 col-md-5">
-                        <div class="card">
-                            <div class="card-body">
-                                <center class="m-t-30"> <img src=""
-                                        class="rounded-circle" width="150" />
-                                    <h4 class="card-title m-t-10"></h4>
-                                    <h6 class="card-subtitle"></h6>
-                                    <div class="row text-center justify-content-md-center">
-                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
-                                                    class="icon-people"></i>
-                                                <font class="font-medium">254</font>
-                                            </a></div>
-                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
-                                                    class="icon-picture"></i>
-                                                <font class="font-medium">54</font>
-                                            </a></div>
-                                    </div>
-                                </center>
-                            </div>
-                            <div>
-                                <hr>
-                            </div>
-                            <div class="card-body"> <small class="text-muted">Email address </small>
-                                <h6></h6> <small class="text-muted p-t-30 db">Phone</small>
-                                <h6></h6> <small class="text-muted p-t-30 db">Address</small>
-                            
-                                <br />
-                                <button class="btn btn-circle btn-secondary"><i class="fab fa-facebook-f"></i></button>
-                                <button class="btn btn-circle btn-secondary"><i class="fab fa-twitter"></i></button>
-                                <button class="btn btn-circle btn-secondary"><i class="fab fa-youtube"></i></button>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <!-- Column -->
                     <!-- Column -->
                     <div class="col-lg-8 col-xlg-9 col-md-7">
                         <div class="card">
                             <div class="card-body">
-                                <form class="form-horizontal form-material mx-2">
+                                <form class="form-horizontal form-material mx-2" action="/teacher/add-video/<%= id %>" method="POST" enctype="multipart/form-data">
                                     <div class="form-group">
-                                        <label class="col-md-12">First Name</label>
+                                        <label class="col-md-12">Video Title</label>
                                         <div class="col-md-12">
-                                            <input type="text" placeholder=""
-                                                class="form-control form-control-line">
+                                            <input type="text" name="title" placeholder="Enter video title" class="form-control form-control-line" required>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="col-md-12">Last Name</label>
+                                        <label class="col-md-12">Description</label>
                                         <div class="col-md-12">
-                                            <input type="text" placeholder=""
-                                                class="form-control form-control-line">
+                                            <textarea rows="5" name="description" placeholder="Enter video description" class="form-control form-control-line" required></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="example-email" class="col-md-12">Email</label>
+                                        <label class="col-md-12">Upload Video</label>
                                         <div class="col-md-12">
-                                            <input type="email" placeholder=""
-                                                class="form-control form-control-line" name="example-email"
-                                                id="example-email">
+                                            <input type="file" name="video" class="form-control form-control-line" accept="video/mp4, video/mkv, video/avi" required>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="col-md-12">Password</label>
-                                        <div class="col-md-12">
-                                            <input type="password" value=""
-                                                class="form-control form-control-line">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-md-12">Phone No</label>
-                                        <div class="col-md-12">
-                                            <input type="text" placeholder=""
-                                                class="form-control form-control-line">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-md-12">Biography</label>
-                                        <div class="col-md-12">
-                                            <textarea rows="5" class="form-control form-control-line"></textarea>
-                                        </div>
-                                    </div>
-                                    
                                     <div class="form-group">
                                         <div class="col-sm-12">
-                                            <button class="btn btn-success text-white">Update Profile</button>
+                                            <button class="btn btn-success text-white" type="submit">Add Video</button>
                                         </div>
                                     </div>
                                 </form>
                             </div>
                         </div>
                     </div>
+                        
                     <!-- Column -->
                 </div>
                 <!-- Row -->
