--- a/views/teacher/xtreme-html/ltr/pages-profile.ejs
+++ b/views/teacher/xtreme-html/ltr/pages-profile.ejs
@@ -242,18 +242,18 @@
                     <div class="col-lg-4 col-xlg-3 col-md-5">
                         <div class="card">
                             <div class="card-body">
-                                <center class="m-t-30"> <img src=""
+                                <center class="m-t-30"> <img src="<%= teacher.profilePic %>"
                                         class="rounded-circle" width="150" />
-                                    <h4 class="card-title m-t-10"></h4>
+                                    <h4 class="card-title m-t-10"><%= teacher.first_name +" "+ teacher.last_name%></h4>
                                     <h6 class="card-subtitle"></h6>
                                     <div class="row text-center justify-content-md-center">
                                         <div class="col-4"><a href="javascript:void(0)" class="link"><i
                                                     class="icon-people"></i>
-                                                <font class="font-medium">254</font>
+                                                <font class="font-medium"><%= courseCount %></font>
                                             </a></div>
                                         <div class="col-4"><a href="javascript:void(0)" class="link"><i
                                                     class="icon-picture"></i>
-                                                <font class="font-medium">54</font>
+                                                <font class="font-medium"><%= videoCount %></font>
                                             </a></div>
                                     </div>
                                 </center>
