--- a/views/teacher/xtreme-html/ltr/videos.ejs
+++ b/views/teacher/xtreme-html/ltr/videos.ejs
@@ -254,7 +254,7 @@
                                         <% videos.forEach((video, index) => { %>
                                             <tr>
                                                 <th scope="row"><%= index + 1 %></th>
-                                                <td><%= video.title %></td>
+                                                <td><a href="/teacher/video/<%= video._id %>"><%= video.title %></a></td>
                                                 <td><%= video.description %></td>
                                                 <td><%= video.createdAt.toDateString() %></td>
                                             </tr>
